[package]
name = "sol-slot-leader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1"
dashmap = "6"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
solana-client = "3.1.11"
solana-sdk = "3.0.0"
solana-commitment-config = "3.1.1"
